# QiYuTkServer

./: .devcontainer.json  .dockerignore  .editorconfig  .env  .gitignore  Changelog.rst  Makefile  README.md  docker-compose.yaml  pylama.ini  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  docker_build.yaml  docker_release.yaml
caddy/: config.caddy
code_gen/: json_code_gen_model.py  json_code_gen_resp.py
code_gen/kotlin/dt/: prefix.txt
code_gen/kotlin/path/: prefix.txt
code_gen/kotlin/stub/: prefix.txt
code_gen/swift/dt/: prefix.txt
code_gen/swift/path/: prefix.txt
code_gen/swift/stub/: prefix.txt
code_gen/ts/dt/: prefix.txt
code_gen/ts/path/: prefix.txt
comby/: async_def.toml  get_ztk_api_v2.toml
docker/: Dockerfile
entrypoints/: admin.sh  api.sh  cron.sh  dev_admin.sh
mk/: code.mk  i18n.mk  local.mk
sqlite/: .gitignore
static/dj_qiyu_tpl/js/: app_doc_node.js  custom_html_element.js
static/tbk/html/: privacy.html
static/web/css/: list.css
tbk/: manage.py  pytest.ini
tbk/core/: apps.py  excpetions.py  logger.py  webhook.py
tbk/core/admin/: __init__.py  log_entry_admin.py  order.py  profile.py  tb_channel_id.py
tbk/core/admin/admin_filters/: __init__.py  user_name_filter.py
tbk/core/api/: __init__.py  api_utils.py  main.py  utils.py
tbk/core/api/api/: __init__.py  app.py  fields.py
tbk/core/api/models/: __init__.py  dm_fields.py
tbk/core/cron/: __init__.py
tbk/core/cron/dtk_cron/: __init__.py  grab_order_dtk_base.py  grab_order_dtk_hour.py
tbk/core/cron/ztk_cron/: __init__.py  grab_order_ztk_base.py  grab_order_ztk_day.py  grab_order_ztk_hour.py  grab_order_ztk_month.py  grab_order_ztk_real_done.py  grab_order_ztk_real_pay.py
tbk/core/dm/: __init__.py
tbk/core/dm/user/: __init__.py  fields.py  user_native.py  user_profile.py
tbk/core/forms/: __init__.py
tbk/core/forms/share/: __init__.py  tkl_share_form.py
tbk/core/forms/tbk/: __init__.py  brand_list.py  item_detail.py
tbk/core/forms/user/: __init__.py  bind_wx.py  native_auth.py  user_token_form.py
tbk/core/logic/: __init__.py  gao_yong.py  order_logic.py  share_logic.py  sys_logic.py  user_logic.py  user_v2.py  ztk_logic.py
tbk/core/logic/tao_bao_logic/: get_url.py  (+3 more)
tbk/core/migrations/: 0001_initial.py  0002_auto_20210412_1753.py
tbk/core/misc/: __init__.py  app_fields.py  model_util.py
tbk/core/models/: __init__.py  model_utils.py  order.py  profile.py  tb_channel_bind.py  tb_channel_id.py  user_token.py
tbk/core/resp/: __init__.py  base.py
tbk/core/shared/: __init__.py  app_errno.py  order.py
tbk/core/test_utils/: __init__.py
tbk/core/views/: __init__.py  index.py
tbk/tbk/: asgi.py  s_config.py  settings.py  urls.py  wsgi.py
tbk/tbk/app_config/: __init__.py  app_constance.py  app_database.py
tbk/web/: apps.py
tbk/web/views/: __init__.py  detail_view.py  index_view.py  search_view.py
templates/tbk/web/: base.html  detail.html  index.html  index.pyi
(+78 files in other folders)
