[tool.poetry]
name = "tbk"
version = "v0.5.13"
description = "奇遇淘客"
authors = ["dev <dev@qiyutech.tech>"]
readme = "README.md"
homepage = "https://tbk.qiyutech.tech/"

[tool.poetry.dependencies]
python = "^3.9"

# 调度
apscheduler = ">=3.6,<4.0"

# web framework
django = ">=3.2.4,<3.3"

# for django database
psycopg2-binary = ">=2.9,<2.10"
# add MySQL if use MySQL database

# 线上环境展示
django-admin-env-notice = ">=0.2"

# 系统动态配置
django-constance = ">=2.8,<2.9"
# django-constance 依赖
django-picklefield = ">=3,<3.1"

# for django image field
pillow = ">=8.1,<9"

# for time zone
pytz = ">=2021,<2022"

# django production deployment
# should use uvicorn and use ASGI mod run python django
gunicorn = ">=20.0,<21"

# for log
django-structlog = ">=2.2,<2.3"

###################################################
# API 接口 依赖
django-ninja = ">=0.16,<0.17"
###################################################


# for dot env files
django-dotenv = ">=1.4,<2.0"

dj-qiyu-tpl = ">=0.4,<0.5"
qiyu-api = ">=0.7,<0.8"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
black = "*"
toml = "*"
pylama = "*"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
